refactor: removed redundant `LevelViewLevelTwo` class + encapsulation of methods by modifying access modifiers + lots of minimal changes `LevelParent.java`: `instantiateLevelView()` method is no longer abstract and is now a concrete method as the implementation for all current levels are the same. Multiple files: - Accepted IntelliJ warnings such as adding an `Objects.requireNonNull` keyword in front of the `getClass().getResource()` method. - Accepted IntelliJ warnings such as modifying lambda expressions to method references. - Added spacing between different types of variables (class constants, class instances and instance variables) for readability. - Modified access modifiers of `public` methods that didn't need to be accessed outside its subclasses and packages to `protected`. - Removed unnecessary exception throws that are never thrown in `Controller` and `Main` classes.